# Bevy-Template

./: Cargo.toml  cargo-generate.toml
.cargo/: config.toml
src/: dev.rs  game.rs  lib.rs  main.rs
