[package]
name = "{{ crate_name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"

{% if bevy_inspector_egui or bevycheck %}
[features]
dev = [
    {%- if bevy_inspector_egui %}"bevy-inspector-egui"{% endif -%}
    {%- if bevy_inspector_egui and bevycheck %}, {% endif -%}
    {%- if bevycheck %}"bevycheck"{% endif -%}
]
{% endif %}

[dependencies]
{%- if bevy_inspector_egui %}
bevy-inspector-egui = { version = "0.11.0", optional = true }{% endif %}

{%- if bevycheck %}
bevycheck = { version = "0.3.0", optional = true }{% endif %}

[dependencies.bevy]
version = "0.7.0"
